# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: config.py  database.py  expense.py  expensetracker.py  index.py  schema.sql  user.py
src/tests/: config_test.py  database_test.py  expense_test.py  expensetracker_test.py  integration_test.py
src/ui/: helpers.py  login_view.py  main_view.py  stats_view.py  ui.py
